# huawei-import

./: .env.local.exemple  .gitignore  Cargo.toml  Justfile  LICENSE  README.md
data/: 2024.03.json  2024.04.json  2024.05.json  2024.06.json  2024.07.json  2024.08.json  2024.09.json  2024.10.json  2024.11.json  2024.12.json  2025.01.json  2025.02.json  2025.03.json  2025.04.json  2025.05.json  2025.06.json  2025.07.json  2025.08.json  2025.09.json
src/: main.rs
